# OpenPandemic

./: Makefile  Makefile.am  Makefile.in  Makefile.old  README.md  configure  configure.ac  world.opw
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: world.opw
src/: disease.c  disease.h  font.c  font.h  land.c  land.h  main.c  mapping.c  mapping.h  sphere.c  sphere.h  texture.c  texture.h  vertex.c  vertex.h  world_loader.c  world_loader.h
world_builder/: Makefile  points.opwbp
world_builder/src/: main.c  point.c  point.h  triangle.c  triangle.h
